07-aws-3tier-bastion-architecture/vpc.tf
resource "aws_vpc" "myVPC" {
    cidr_block = "10.0.0.0/16"
        tags = {
        "name" = "MyVPC"
    }
  
}
